Fix for mantis:387 - url field validation is now a subset of what the topaz services validate
git-svn-id: http://svn.topazproject.org/svn/head@2232 48088309-b40f-0410-b149-b14953253675